SERVER-12472 Fail MoveChunk if an index is needed on TO shard and data exists